--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "dependencies": {
     "bluebird": "^3.7",
-    "@UnicornGlobal/liquid": "^4.0"
+    "@UnicornGlobal/liquid": "https://github.com/UnicornGlobal/liquid.git"
   }
 }
